# jrender

./: .gitignore  README.md  Render.ipynb  example.json
docker/: Dockerfile  build.sh  run.sh
jelorender/: CMakeLists.txt
jelorender/include/: Camera.h  Light.h  Object.h  Render.h  RenderParser.h  Screen.h  Sphere.h  jpointers.h  logging.h  tnt_ops.h  tnt_types.h
jelorender/include/tnt/: tnt_array1d.h
jelorender/src/: Camera.cpp  Light.cpp  Object.cpp  Render.cpp  RenderParser.cpp  Screen.cpp  Sphere.cpp  main.cpp
jelorender/test/: test_units.cpp
